# Smart-Home-using-Arduino-and-Raspberry-Pi

./: README.md  networkProtocol.md
NetworkProtocol/: MessageProcesses.md  messageStructure.md
NetworkProtocol/NetworkProtocol/: CMakeLists.txt  Discovery.cpp  Discovery.h  messageBuilder.cpp  messageBuilder.h  messageObjects.cpp  messageObjects.h  networkDevice.cpp  networkDevice.h  networkHub.cpp  networkHub.h  timer.cpp  timer.h
NetworkProtocol/NetworkProtocol/ConnectionBenchmark/: ConnectionBenchmark.cpp  ConnectionBenchmark.h  ConnectionBenchmarkWrapper.cpp  ConnectionBenchmarkWrapper.h
NetworkProtocol/NetworkProtocol/Messages/: messageBuilder.cpp  messageBuilder.h  messageObjects.cpp  messageObjects.h
NetworkProtocol/NetworkProtocol/boostTests/: CMakeLists.txt  CreateRawPackageTest.cpp  MessageBuilderTest.cpp
NetworkProtocol/UMLet files/: Registration.uxf  TreeExample.uxf  classes.uxf
